--- a/ultimate_challenge/Take Home Challenge- Ultimate Technologies Inc..ipynb
+++ b/ultimate_challenge/Take Home Challenge- Ultimate Technologies Inc..ipynb
@@ -1449,7 +1449,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1846,13 +1846,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Random Forest Classifier"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -2017,13 +2010,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Neural Network"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -2178,7 +2164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
